feat: Send rendering errors and warnings (#217)
* feat: Send rendering errors and warnings

With this change API returns a temporary URL to the generated file,
along with errors and warnings.

* fix: Include line numbers in xml2rfc errors and warnings

* fix: Add ability to control downloadability of file export
